--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,4 +33,5 @@ dependencies = [
     "tiktoken>=0.11.0",
     "transformers>=4.55.2",
     "unstructured[docx]>=0.18.13",
+    "wikipedia>=1.4.0",
 ]
